--- a/drupal/config/sync/user.role.anonymous.yml
+++ b/drupal/config/sync/user.role.anonymous.yml
@@ -26,10 +26,14 @@ permissions:
   - 'access druxt resources'
   - 'access site-wide contact form'
   - 'create article content'
+  - 'create paragraph content testimonial'
   - 'create paragraph content wysiwyg'
+  - 'delete paragraph content testimonial'
   - 'delete paragraph content wysiwyg'
   - 'edit any article content'
   - 'search content'
+  - 'update paragraph content testimonial'
   - 'update paragraph content wysiwyg'
   - 'use text format restricted_html'
+  - 'view paragraph content testimonial'
   - 'view paragraph content wysiwyg'
